--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,9 +28,7 @@ jobs:
         run: |
           mkdir -p supabase/migrations
           TIMESTAMP=$(date +%s)
-          MIGRATION_FILE="supabase/migrations/${TIMESTAMP}_auto.sql"
-          supabase db diff --db-url ${{ secrets.SUPABASE_TEST_DB_URL }} --use-migra > $MIGRATION_FILE
-          echo "Generated migration: $MIGRATION_FILE"
+          supabase db diff --db-url ${{ secrets.SUPABASE_TEST_DB_URL }} --use-migra > supabase/migrations/${TIMESTAMP}_auto.sql
 
       - name: Commit and push migration
         env:
@@ -60,16 +58,30 @@ jobs:
           sudo mv -f $TMP_DIR/supabase /usr/local/bin/supabase
           rm -rf $TMP_DIR
 
-      - name: Apply migrations to Prod
+      - name: Apply migrations to Prod (safe baseline)
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          # Check if supabase_migrations table exists
+          mkdir -p supabase/migrations
+
+          # Check if supabase_migrations table exists in Prod
           EXISTS=$(psql ${{ secrets.SUPABASE_PROD_DB_URL }} -tAc "SELECT 1 FROM information_schema.tables WHERE table_name='supabase_migrations';")
 
           if [ "$EXISTS" != "1" ]; then
-            echo "No migrations applied yet. Using baseline approach..."
-            # Apply the first migration safely
-            supabase db push --db-url ${{ secrets.SUPABASE_PROD_DB_URL }} --force
+            echo "No migrations applied yet. Creating and committing baseline migration..."
+            TIMESTAMP=$(date +%s)
+            BASELINE_FILE="supabase/migrations/${TIMESTAMP}_baseline.sql"
+            supabase db diff --db-url ${{ secrets.SUPABASE_TEST_DB_URL }} --use-migra > $BASELINE_FILE
+
+            # Commit baseline migration to GitHub
+            git config user.name "github-actions[bot]"
+            git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+            git add $BASELINE_FILE
+            git commit -m "chore: add baseline migration $(date +'%Y-%m-%d %H:%M:%S')"
+            git push https://x-access-token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git HEAD:${GITHUB_REF#refs/heads/}
           else
-            echo "Migrations exist. Applying incremental migrations..."
-            supabase db push --db-url ${{ secrets.SUPABASE_PROD_DB_URL }}
+            echo "Migrations already exist. Applying incremental migrations..."
           fi
+
+          # Apply all migrations (baseline + incremental)
+          supabase db push --db-url ${{ secrets.SUPABASE_PROD_DB_URL }}
