--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,29 +24,26 @@ jobs:
           sudo mv -f $TMP_DIR/supabase /usr/local/bin/supabase
           rm -rf $TMP_DIR
 
-      - name: Generate migration from Test DB
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Generate incremental migration from Test DB
         run: |
           mkdir -p supabase/migrations
           TIMESTAMP=$(date +%s)
-          MIGRATION_FILE="supabase/migrations/${TIMESTAMP}_auto.sql"
-          supabase db diff --db-url ${{ secrets.SUPABASE_TEST_DB_URL }} --use-migra > "$MIGRATION_FILE"
+          INCREMENTAL_FILE="supabase/migrations/${TIMESTAMP}_auto.sql"
+          supabase db diff --db-url ${{ secrets.SUPABASE_TEST_DB_URL }} --use-migra > "$INCREMENTAL_FILE"
 
-          if [ -s "$MIGRATION_FILE" ]; then
-            echo "Schema changes detected. Committing migration..."
-            git config user.name "github-actions[bot]"
-            git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-            git add "$MIGRATION_FILE"
-
-            if ! git diff --cached --quiet; then
-              git commit -m "chore: add migration from Test DB $(date +'%Y-%m-%d %H:%M:%S')"
-              git pull --rebase https://x-access-token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git HEAD
-              git push https://x-access-token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git HEAD:${GITHUB_REF#refs/heads/}
-            fi
+      - name: Commit and push incremental migration safely
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          if [ -s "$INCREMENTAL_FILE" ]; then
+            git add "$INCREMENTAL_FILE"
+            git commit -m "chore: add incremental migration $(date +'%Y-%m-%d %H:%M:%S')" || echo "No changes to commit"
+            git pull --rebase https://x-access-token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git HEAD
+            git push https://x-access-token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git HEAD:${GITHUB_REF#refs/heads/}
           else
-            echo "No schema changes detected. Skipping migration commit."
-            rm -f "$MIGRATION_FILE"
+            echo "No migration changes detected. Skipping commit."
           fi
 
   deploy-to-prod:
@@ -67,35 +64,30 @@ jobs:
           sudo mv -f $TMP_DIR/supabase /usr/local/bin/supabase
           rm -rf $TMP_DIR
 
-      - name: Apply migrations to Prod (safe baseline)
+      - name: Apply migrations to Prod safely
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           mkdir -p supabase/migrations
 
-          # Check if supabase_migrations table exists in Prod
+          # Check if Prod is empty
           EXISTS=$(psql ${{ secrets.SUPABASE_PROD_DB_URL }} -tAc "SELECT 1 FROM information_schema.tables WHERE table_name='supabase_migrations';")
 
           if [ "$EXISTS" != "1" ]; then
-            echo "No migrations applied yet. Creating baseline migration..."
+            echo "Empty Prod detected. Creating full baseline from Test DB..."
             TIMESTAMP=$(date +%s)
             BASELINE_FILE="supabase/migrations/${TIMESTAMP}_baseline.sql"
-            supabase db diff --db-url ${{ secrets.SUPABASE_TEST_DB_URL }} --use-migra > "$BASELINE_FILE"
+            # Use full dump instead of db diff for baseline
+            supabase db dump --db-url ${{ secrets.SUPABASE_TEST_DB_URL }} > "$BASELINE_FILE"
 
-            if [ -s "$BASELINE_FILE" ]; then
-              git config user.name "github-actions[bot]"
-              git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-              git add "$BASELINE_FILE"
-              git commit -m "chore: add baseline migration $(date +'%Y-%m-%d %H:%M:%S')"
-              git pull --rebase https://x-access-token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git HEAD
-              git push https://x-access-token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git HEAD:${GITHUB_REF#refs/heads/}
-            else
-              echo "Baseline migration is empty. Skipping commit."
-              rm -f "$BASELINE_FILE"
-            fi
-          else
-            echo "Migrations already exist. Applying incremental migrations..."
+            # Commit baseline safely
+            git config user.name "github-actions[bot]"
+            git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+            git add "$BASELINE_FILE"
+            git commit -m "chore: add baseline migration $(date +'%Y-%m-%d %H:%M:%S')" || echo "No changes to commit"
+            git pull --rebase https://x-access-token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git HEAD
+            git push https://x-access-token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git HEAD:${GITHUB_REF#refs/heads/}
           fi
 
-          # Apply all migrations (baseline + incremental)
+          echo "Applying all migrations to Prod..."
           supabase db push --db-url ${{ secrets.SUPABASE_PROD_DB_URL }}
