--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,14 +24,12 @@ jobs:
           sudo mv -f $TMP_DIR/supabase /usr/local/bin/supabase
           rm -rf $TMP_DIR
 
-      - name: Ensure migrations folder exists
-        run: mkdir -p supabase/migrations
-
       - name: Generate migration from Test DB
         run: |
+          mkdir -p supabase/migrations
           TIMESTAMP=$(date +%s)
           MIGRATION_FILE="supabase/migrations/${TIMESTAMP}_auto.sql"
-          supabase db diff --db-url ${{ secrets.SUPABASE_TEST_DB_URL }} --use-migra > "$MIGRATION_FILE"
+          supabase db diff --db-url ${{ secrets.SUPABASE_TEST_DB_URL }} --use-migra > $MIGRATION_FILE
 
       - name: Commit and push migration safely
         env:
@@ -39,15 +37,16 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git add "$MIGRATION_FILE"
 
-          if [ -s "$MIGRATION_FILE" ]; then
-            git add "$MIGRATION_FILE"
-            git commit -m "chore: add incremental migration $(date +'%Y-%m-%d %H:%M:%S')" || echo "No changes to commit"
+          if ! git diff --cached --quiet; then
+            git commit -m "chore: add migration from Test DB $(date +'%Y-%m-%d %H:%M:%S')"
+            # Pull latest changes and rebase
             git pull --rebase https://x-access-token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git HEAD
+            # Push commit
             git push https://x-access-token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git HEAD:${GITHUB_REF#refs/heads/}
           else
             echo "No migration changes detected. Skipping commit."
-            rm -f "$MIGRATION_FILE"
           fi
 
   deploy-to-prod:
@@ -74,32 +73,28 @@ jobs:
         run: |
           mkdir -p supabase/migrations
 
-          # Check if Prod is truly empty (no tables in public schema)
-          TABLE_COUNT=$(psql ${{ secrets.SUPABASE_PROD_DB_URL }} -tAc \
-            "SELECT count(*) FROM information_schema.tables WHERE table_schema='public';")
+          # Check if supabase_migrations table exists in Prod
+          EXISTS=$(psql ${{ secrets.SUPABASE_PROD_DB_URL }} -tAc "SELECT 1 FROM information_schema.tables WHERE table_name='supabase_migrations';")
 
-          # Check if baseline exists in repo
-          BASELINE_EXISTS=$(ls supabase/migrations/*baseline.sql 2>/dev/null || true)
-
-          if [ "$TABLE_COUNT" -eq "0" ] && [ -z "$BASELINE_EXISTS" ]; then
-            echo "Prod is empty and no baseline exists. Creating full baseline..."
+          if [ "$EXISTS" != "1" ]; then
+            echo "No migrations applied yet. Creating baseline migration..."
             TIMESTAMP=$(date +%s)
             BASELINE_FILE="supabase/migrations/${TIMESTAMP}_baseline.sql"
-            supabase db dump --db-url ${{ secrets.SUPABASE_TEST_DB_URL }} > "$BASELINE_FILE"
+            supabase db diff --db-url ${{ secrets.SUPABASE_TEST_DB_URL }} --use-migra > $BASELINE_FILE
 
-            # Commit baseline safely
+            # Commit baseline migration safely
             git config user.name "github-actions[bot]"
             git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-            git add "$BASELINE_FILE"
-            git commit -m "chore: add baseline migration $(date +'%Y-%m-%d %H:%M:%S')" || echo "No changes to commit"
-            git pull --rebase https://x-access-token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git HEAD
-            git push https://x-access-token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git HEAD:${GITHUB_REF#refs/heads/}
+            git add $BASELINE_FILE
 
-            echo "Applying baseline migration to Prod..."
-            supabase db push --db-url ${{ secrets.SUPABASE_PROD_DB_URL }}
-
+            if ! git diff --cached --quiet; then
+              git commit -m "chore: add baseline migration $(date +'%Y-%m-%d %H:%M:%S')"
+              git pull --rebase https://x-access-token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git HEAD
+              git push https://x-access-token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git HEAD:${GITHUB_REF#refs/heads/}
+            fi
           else
-            echo "Prod is not empty or baseline already exists. Skipping baseline."
-            echo "Applying only incremental migrations..."
-            supabase db push --db-url ${{ secrets.SUPABASE_PROD_DB_URL }}
+            echo "Migrations already exist. Applying incremental migrations..."
           fi
+
+          # Apply all migrations to Prod
+          supabase db push --db-url ${{ secrets.SUPABASE_PROD_DB_URL }}
