baseline update last

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,9 +41,7 @@ jobs:
 
           if ! git diff --cached --quiet; then
             git commit -m "chore: add migration from Test DB $(date +'%Y-%m-%d %H:%M:%S')"
-            # Pull latest changes and rebase
             git pull --rebase https://x-access-token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git HEAD
-            # Push commit
             git push https://x-access-token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git HEAD:${GITHUB_REF#refs/heads/}
           else
             echo "No migration changes detected. Skipping commit."
@@ -67,34 +65,17 @@ jobs:
           sudo mv -f $TMP_DIR/supabase /usr/local/bin/supabase
           rm -rf $TMP_DIR
 
-      - name: Apply migrations to Prod safely
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Ensure supabase_migrations table exists
         run: |
-          mkdir -p supabase/migrations
+          psql ${{ secrets.SUPABASE_PROD_DB_URL }} <<'SQL'
+          CREATE TABLE IF NOT EXISTS supabase_migrations (
+            id bigint GENERATED ALWAYS AS IDENTITY PRIMARY KEY,
+            name text NOT NULL,
+            hash text NOT NULL,
+            executed_at timestamp with time zone DEFAULT now() NOT NULL
+          );
+          SQL
 
-          # Check if supabase_migrations table exists in Prod
-          EXISTS=$(psql ${{ secrets.SUPABASE_PROD_DB_URL }} -tAc "SELECT 1 FROM information_schema.tables WHERE table_name='supabase_migrations';")
-
-          if [ "$EXISTS" != "1" ]; then
-            echo "No migrations applied yet. Creating baseline migration..."
-            TIMESTAMP=$(date +%s)
-            BASELINE_FILE="supabase/migrations/${TIMESTAMP}_baseline.sql"
-            supabase db diff --db-url ${{ secrets.SUPABASE_TEST_DB_URL }} --use-migra > $BASELINE_FILE
-
-            # Commit baseline migration safely
-            git config user.name "github-actions[bot]"
-            git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-            git add $BASELINE_FILE
-
-            if ! git diff --cached --quiet; then
-              git commit -m "chore: add baseline migration $(date +'%Y-%m-%d %H:%M:%S')"
-              git pull --rebase https://x-access-token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git HEAD
-              git push https://x-access-token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git HEAD:${GITHUB_REF#refs/heads/}
-            fi
-          else
-            echo "Migrations already exist. Applying incremental migrations..."
-          fi
-
-          # Apply all migrations to Prod
+      - name: Apply migrations to Prod
+        run: |
           supabase db push --db-url ${{ secrets.SUPABASE_PROD_DB_URL }}
