--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,23 +24,22 @@ jobs:
           sudo mv -f $TMP_DIR/supabase /usr/local/bin/supabase
           rm -rf $TMP_DIR
 
-      - name: Generate migration from Test DB
+      - name: Generate incremental migration from Test DB
         run: |
           mkdir -p supabase/migrations
           TIMESTAMP=$(date +%s)
-          MIGRATION_FILE="supabase/migrations/${TIMESTAMP}_auto.sql"
-          supabase db diff --db-url ${{ secrets.SUPABASE_TEST_DB_URL }} --use-migra > $MIGRATION_FILE
+          INCREMENTAL_FILE="supabase/migrations/${TIMESTAMP}_auto.sql"
+          supabase db diff --db-url ${{ secrets.SUPABASE_TEST_DB_URL }} --use-migra > "$INCREMENTAL_FILE"
 
-      - name: Commit and push migration safely
+      - name: Commit and push incremental migration safely
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add "$MIGRATION_FILE"
-
-          if ! git diff --cached --quiet; then
-            git commit -m "chore: add migration from Test DB $(date +'%Y-%m-%d %H:%M:%S')"
+          if [ -s "$INCREMENTAL_FILE" ]; then
+            git add "$INCREMENTAL_FILE"
+            git commit -m "chore: add incremental migration $(date +'%Y-%m-%d %H:%M:%S')" || echo "No changes to commit"
             git pull --rebase https://x-access-token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git HEAD
             git push https://x-access-token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git HEAD:${GITHUB_REF#refs/heads/}
           else
@@ -65,17 +64,26 @@ jobs:
           sudo mv -f $TMP_DIR/supabase /usr/local/bin/supabase
           rm -rf $TMP_DIR
 
-      - name: Ensure supabase_migrations table exists
+      - name: Apply migrations to Prod safely
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          psql ${{ secrets.SUPABASE_PROD_DB_URL }} <<'SQL'
-          CREATE TABLE IF NOT EXISTS supabase_migrations (
-            id bigint GENERATED ALWAYS AS IDENTITY PRIMARY KEY,
-            name text NOT NULL,
-            hash text NOT NULL,
-            executed_at timestamp with time zone DEFAULT now() NOT NULL
-          );
-          SQL
+          mkdir -p supabase/migrations supabase/baselines
 
-      - name: Apply migrations to Prod
-        run: |
+          # Check if Prod already has supabase_migrations table
+          EXISTS=$(psql ${{ secrets.SUPABASE_PROD_DB_URL }} -tAc "SELECT 1 FROM information_schema.tables WHERE table_name='supabase_migrations';")
+
+          if [ "$EXISTS" != "1" ]; then
+            echo "Empty Prod detected. Creating full baseline from Test DB..."
+            TIMESTAMP=$(date +%s)
+            BASELINE_FILE="supabase/baselines/${TIMESTAMP}_baseline.sql"
+            
+            # Dump schema from Test DB
+            supabase db dump --db-url ${{ secrets.SUPABASE_TEST_DB_URL }} > "$BASELINE_FILE"
+
+            # Apply baseline directly (NOT committed into migrations/)
+            psql ${{ secrets.SUPABASE_PROD_DB_URL }} < "$BASELINE_FILE"
+          fi
+
+          echo "Applying incremental migrations to Prod..."
           supabase db push --db-url ${{ secrets.SUPABASE_PROD_DB_URL }}
