--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,22 +29,28 @@ jobs:
           mkdir -p supabase/migrations
           TIMESTAMP=$(date +%s)
           INCREMENTAL_FILE="supabase/migrations/${TIMESTAMP}_auto.sql"
-          supabase db diff --db-url ${{ secrets.SUPABASE_TEST_DB_URL }} --use-migra > "$INCREMENTAL_FILE"
+          set -o pipefail
+          DIFF_OUTPUT=$(supabase db diff --db-url ${{ secrets.SUPABASE_TEST_DB_URL }} --use-migra)
 
+          if [ -n "$DIFF_OUTPUT" ]; then
+            echo "$DIFF_OUTPUT" > "$INCREMENTAL_FILE"
+            echo "Generated migration: $INCREMENTAL_FILE"
+            echo "INCREMENTAL_FILE=$INCREMENTAL_FILE" >> $GITHUB_ENV
+          else
+            echo "No migration changes detected. Skipping commit."
+            echo "INCREMENTAL_FILE=" >> $GITHUB_ENV
+          fi
       - name: Commit and push incremental migration safely
+        if: env.INCREMENTAL_FILE != ''
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          if [ -s "$INCREMENTAL_FILE" ]; then
-            git add "$INCREMENTAL_FILE"
-            git commit -m "chore: add incremental migration $(date +'%Y-%m-%d %H:%M:%S')" || echo "No changes to commit"
-            git pull --rebase https://x-access-token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git HEAD
-            git push https://x-access-token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git HEAD:${GITHUB_REF#refs/heads/}
-          else
-            echo "No migration changes detected. Skipping commit."
-          fi
+          git add "$INCREMENTAL_FILE"
+          git commit -m "chore: add incremental migration $(date +'%Y-%m-%d %H:%M:%S')" || echo "No changes to commit"
+          git pull --rebase https://x-access-token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git HEAD
+          git push https://x-access-token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git HEAD:${GITHUB_REF#refs/heads/}
 
   deploy-to-prod:
     needs: generate-migration
